@@ -1,10 +1,18 @@
-2005-08-04	dmolavi  <dari@nukedgallery.net>
+2005-08-10  dmolavi  <dari@nukedgallery.net>
+	FIX:
+	  * Sidebar did not include G2 CSS. This fix takes care of that,
+	    but invalidates the HTML that is generated, since the CSS
+	    link tag is included within the body of the page.  Doesn't 
+	    matter anyway, since PHPNuke's HTML is light years from valid 
+	    anyway.
+
+2005-08-04  dmolavi  <dari@nukedgallery.net>
 	NEW:
 	  * German language file
 	FIX:
 	  * Changelog format
 	
-2005-08-02	dmolavi	 <dari@nukedgallery.net>
+2005-08-02  dmolavi  <dari@nukedgallery.net>
 	NEW:
  	  * Added ChangeLog to repository.
 
